clusters/prod/apps/smart-rest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-rest-prod
  labels:
    app.kubernetes.io/name: smart-rest
    app.kubernetes.io/part-of: smart-rest
    environment: production
