clusters/prod/apps/smart-rest/service-php-fpm.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-rest-php-fpm
  labels:
    app.kubernetes.io/name: smart-rest
    app.kubernetes.io/component: php-fpm
spec:
  selector:
    app.kubernetes.io/name: smart-rest
    app.kubernetes.io/component: php-fpm
  ports:
    - name: fastcgi
      port: 9000
      targetPort: fastcgi
